--- a/public/assets/css/flaticon_afbd3404a2e1104832d0.css
+++ b/public/assets/css/flaticon_afbd3404a2e1104832d0.css
@@ -1,4 +1,4 @@
-
+﻿
 @font-face {
   font-family: "flaticon_afbd3404a2e1104832d0";
   src: url("../fonts/flaticon_afbd3404a2e1104832d0.eot");
@@ -8,12 +8,14 @@
        url("../fonts/flaticon_afbd3404a2e1104832d0.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "flaticon_afbd3404a2e1104832d0";
     src: url("../fonts/flaticon_afbd3404a2e1104832d0.svg#Flaticon") format("svg");
+    font-display: swap;
   }
 }
 
@@ -286,3 +288,4 @@
 .flaticon-play-1:before {
     content: "\f155";
 }
+
